<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Projekt AVR-Webserver</string>
    
    <string name="messwerte">Messwerte</string>
    <string name="quelle">Messquelle</string>
    <string name="mess">Messw</string>
    <string name="wert">ert</string>
    <string name="einheiten">Einheiten</string>
    <string name="button1">aktualisieren</string>
    <string name="aktualisiert">aktualisiert</string>
    <string name="nichtsNeues">Keine neuen Messwerte und Namen.</string>
        
    <string name="schalter">Schalter</string>
    <string name="button2">Zustände abfragen</string>
    <string name="schalter01">Schalter 1</string>
    <string name="schalter02">Schalter 2</string>
    <string name="schalter03">Schalter 3</string>
    <string name="schalter04">Schalter 4</string>
    <string name="schalter05">Schalter 5</string>
    <string name="schalter06">Schalter 6</string>
    <string name="schalter07">Schalter 7</string>
    <string name="schalter08">Schalter 8</string>
        
    <string name="impressum">Impressum</string>
    <string name="kurs">Kurs: TIT09IN</string>
    <string name="studienarbeit">Studienarbeit: Fernüberwachung und Fernsteuerung eines AVR über das 
Internet (Android Applikation)</string>
    <string name="autoren">Autoren: Hans-Joachim Krauch und Waldemar Siebert</string>
    <string name="betreuer">Betreuer: Klaus Hartmann</string>

    <string name="einstellungen">Einstellungen</string>
    <string name="address">Adresse des AVR eingeben</string>
    <string name="verbinden">verbinden!</string>
    <string name="ok">OK</string>
    <string name="abbrechen">Abbrechen</string>
    
    <string name="ipfalsch">AVR ist nicht erreichbar</string>
    
</resources>
